2003-08-27  Not Zed  <NotZed@Ximian.com>

	* evolution-mail-message.xml: Moved EditCopy EditPaste, and
	EditCut here.

	* evolution-mail-list.xml: Removed EditCopy, EditPaste, and
	EditCut.

2003-09-11  Tim Wo <tim.wo@sun.com>

	* evolution-contact-editor.xml: add mnemonic "C" for "Save and _Close",
	"D" for "_Delete", "l" for "Close". Fixes bug #48096
	* evolution-contact-list-editor.xml: add mnemonic "C" for "Save and
	_Close", "D" for "_Delete", "l" for "Close". Fixes bug #48096
	* evolution-signature-editor.xml: add mnemonic "C" for "Save and
	_Close", change mnemonic "C" to "l" for "Close".  Fixes bug #48205

2003-09-05  Yuedong Du  <uuedong.du@sun.com>

	* evolution-mail-global.xml: add access key 'w' for 'Post New Message'
	* evolution-mail-list.xml: change the access key of Expunge to 'x',
	thus 'Post a Reply' can use 'e'.
	* evolution-mail-message.xml: add access key 'y' for 'Post a Reply'

2003-08-27  Calvin Liu <calvin.liu@sun.com>

	* evolution-mail-message.xml: Change "Search Message" to "Search
	in Message", which is more intuitive. Fix bug #47329.

2003-08-05  Jack Jia  <jack.jia@sun.com>

	* evolution-comp-editor.xml: add the accelerator "P" for "Print",
	"S" for "Save", "C" for "Save and _Close", "A" for "Save _As...",
	"D" for "Delete". Fixes bug #47379.
 
2003-07-24  Ettore Perazzoli  <ettore@ximian.com>

	* evolution.xml: Cleaned up a bunch of menu and toolbar items that
	are not being used or do not belong to the shell anymore in the
	new UI.  Also removed all pop-up menus.

2003-07-17  Rodrigo Moya <rodrigo@ximian.com>

	* evolution-tasks.xml: s/Expunge/Purge.

	* evolution-calendar.xml: fixed menmonic for Purge.

2003-07-15  Rodrigo Moya <rodrigo@ximian.com>

	* evolution-calendar.xml: added 'Purge' menu item.

	* evolution-tasks.xml: added separator after 'Send/Receive'.

2003-07-10  Yuedong Du  <yuedong.du@sun.com>

	* evolution-mail-message.xml: add a menu entry corresponding to new
	introduced caret mode, see bug #44607
